Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35062

[Durable delete issue] Rebalance stuck when doc_ops running and replica updated in parallel [2019/7/19]

    XMLWordPrintable

Details

    Description

      Build: 6.5.0-3748

      Scenario:

      1. 4 node cluster, couchbase bucket (replica=0)
      2. Loaded 10K docs with durabiilty=MAJORITY
      3. Updated bucket replica from 0 to 1
      4. Initiated doc_operation create/update/delete with durability=MAJORITY in background (All doc operations succeeds)
      5. Started rebalance along with step-4 in parallel

      Observation:

      Rebalance struck at 0.097 % for long time and not proceeding further.

      Rebalance state:

      UI logs:

      TAF testcase:

      bucket_param_tests.bucket_param_update.BucketParamTest.test_replica_update,nodes_init=5,num_items=10000,replicas=0,doc_ops=update;create;delete,durability=MAJORITY

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            ashwin.govindarajulu Ashwin Govindarajulu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty